# Python-fastapi

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  main.py  pyproject.toml
app/: main.py
app/common/: router.py
scripts/: check-branch-name.sh  check-commit-msg.sh
tests/: test_main.py
